Finished README and updated code files to include names

--- a/src/project2.html
+++ b/src/project2.html
@@ -1,4 +1,5 @@
-<!--Name: Iqra Rana, Date: 4/10/2018-->
+<!--Iqra Rana, Jackson DeMeyers, Matthew Michaels
+	Date: 4/10/2018-->
 <!DOCTYPE html>
 <html>
 
